# diffract

./: .gitignore  AGENTS.md  CLAUDE.md  COPYING  GEMINI.md  README.md  after.ts  before.ts  diffract.opam  dune-project  notes.md  pp.pat  setup.sh  test.pat  test.ts
.githooks/: pre-push
bench/: README.md  apply_edits.ml  dune  find_matches.ml
benchmarks/: bench_compare.ml  bench_ellipsis.ml  bench_index.ml  bench_match.ml  bench_scaling.ml  dune
benchmarks/results/: 1769463390-unknown.json  1769463413-unknown.json  1769497438-unknown.json  1769497977-unknown.json  1769499045-unknown.json  1769500667-unknown.json  1769513617-unknown.json  1769514245-unknown.json  plot_history.gp
docs/: benchmarks.md  change-summary-design.md  change-summary-walkthrough.md  change-summary.md  field-mode.md  grammar-metadata.md  internals.md  migration-coverage.md  partial-mode.md  patterns.md  references.md  surgical-transforms.md  transforms.md  universal-tokenizer.md
examples/: abstract_example.ml  antiunify_example.ml  diff_example.ml  dump_full_ast.ml  dune  kotlin_advanced_example.ml  pattern_example.ml  traverse.ml
examples/codebase_after/: file1.ts  file2.ts
examples/codebase_before/: file1.ts  file2.ts
grammars/: build-grammars.sh  dune  package-lock.json  package.json
grammars/metadata/: kotlin.grammar.json
lib/: abstract.ml  abstract.mli  antiunify.ml  antiunify.mli  change_summary.ml  change_summary.mli  context.ml  context.mli  cs_cluster.ml  cs_config.ml  cs_evaluate.ml  cs_fusion.ml  cs_io.ml  cs_pattern.ml  cs_propose.ml  cs_select.ml  cs_tier.ml  cs_trace.ml  cs_types.ml  cursor.ml  cursor.mli  diff.ml  diff.mli  diffract.ml  diffract.mli  dune  file_scan.ml  grammar_metadata.ml  grammar_metadata.mli  languages.ml  match.ml  match.mli  match_engine.ml  match_parse.ml  match_search.ml  match_transform.ml  match_types.ml  matcher.ml  matcher.mli  node.ml  (+21 more)
scripts/: diffract-checkout.sh
tests/: dune  test_antiunify.ml  test_change_summary.ml  test_cs_pattern.ml  test_cursor.ml  test_diff.ml  test_file_scan.ml  test_grammar_metadata.ml  test_match.ml  test_matcher.ml  test_node.ml  test_raw_vs_wrapped.ml  test_runner.ml  test_stmatch.ml  test_tokenize.ml  test_tree_diff.ml  test_tree_inclusion.ml  test_tree_sitter_cursor.ml
tests/change_summary_cases/api_swap/: expected.summary
tests/change_summary_cases/baseline/: expected.summary
tests/change_summary_cases/co_occurring_renames/: expected.summary
tests/change_summary_cases/conjunctive_hook_swap/: expected.summary  pending
tests/change_summary_cases/import_removal/: expected.summary
tests/change_summary_cases/import_removal_mixed/: expected.summary
tests/change_summary_cases/import_swap/: expected.summary
tests/change_summary_cases/kotlin_anchored_rename/: expected.summary
tests/change_summary_cases/kotlin_assert_migration/: expected.summary
tests/change_summary_cases/kotlin_call_lift_required/: expected.summary
tests/change_summary_cases/kotlin_common_import_drop/: expected.summary
tests/change_summary_cases/kotlin_ctor_extract_arg/: expected.summary  pending
tests/change_summary_cases/kotlin_delta_pooled_drop/: expected.summary
tests/change_summary_cases/kotlin_expression_body/: expected.summary
tests/change_summary_cases/kotlin_import_path_generalize/: expected.summary
tests/change_summary_cases/kotlin_log/: expected.summary
tests/change_summary_cases/kotlin_method_rename/: expected.summary
tests/change_summary_cases/kotlin_minimal_claiming/: expected.summary
tests/change_summary_cases/kotlin_rename_fused_rescue/: expected.summary
tests/change_summary_cases/kotlin_unwrap_chain/: expected.summary  pending
tests/change_summary_cases/kotlin_unwrap_collapse/: expected.summary
tests/change_summary_cases/method_rename_via_lift/: expected.summary
tests/change_summary_cases/mixed_systematic/: expected.summary
tests/change_summary_cases/param_drop/: expected.summary
tests/change_summary_cases/partial_overlap_fusion/: expected.summary
tests/change_summary_cases/php_array_short_syntax/: expected.summary
tests/change_summary_cases/property_rename/: expected.summary
tests/change_summary_cases/require_to_import/: expected.summary
tests/change_summary_cases/ts_arg_drop_confounded/: expected.summary
tests/change_summary_cases/ts_arg_drop_detour/: expected.summary
tests/change_summary_cases/ts_memo_skeleton_bloat/: pending  (+1 more)
(+275 files in other folders)
