(executable
 (name bench_match)
 (libraries diffract bechamel bechamel-notty notty.unix yojson unix))

(executable
 (name bench_compare)
 (libraries unix yojson))

(executable
 (name bench_scaling)
 (libraries diffract unix))

(executable
 (name bench_index)
 (libraries diffract unix))

(executable
 (name bench_ellipsis)
 (libraries diffract unix))
