(rule
 (targets c_flags.sexp)
 (action
  (with-stdout-to
   %{targets}
   (bash "echo '('$(pkg-config --cflags tree-sitter)')'"))))

(rule
 (targets c_library_flags.sexp)
 (action
  (with-stdout-to
   %{targets}
   (bash "echo '('$(pkg-config --libs tree-sitter)')'"))))

(library
 (name diffract)
 (public_name diffract)
 (libraries ctypes ctypes.foreign)
 (foreign_stubs
  (language c)
  (names ts_helper)
  (flags
   (:standard)
   (:include c_flags.sexp)))
 (c_library_flags
  (:standard)
  (:include c_library_flags.sexp)))
